--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
     <!-- end navbar -->
 
     <!-- jumbotron -->
-    <section class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4" />
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <section class="jumbotron text-center">
+      <img src="assets/img/yoo.jpg" alt="Arifin Cesar Priyoga" width="200" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4">Arifin Cesar Priyoga</h1>
+      <p class="lead">just simply people</p>
     </section>
     <!-- end jumbotron -->
 
