--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       <img src="assets/img/yoo.jpg" alt="Arifin Cesar Priyoga" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Arifin Cesar Priyoga</h1>
       <p class="lead">just simply people</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,160L40,165.3C80,171,160,181,240,176C320,171,400,149,480,149.3C560,149,640,171,720,197.3C800,224,880,256,960,256C1040,256,1120,224,1200,213.3C1280,203,1360,213,1400,218.7L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- end jumbotron -->
 
