--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
     </section>
     <!-- end jumbotron -->
 
+    <!-- About -->
+    <section id="About">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-4">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet laboriosam magni consectetur voluptatem doloremque possimus totam libero vitae blanditiis maxime?</p>
+          </div>
+          <div class="col-4"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia earum cum, odio, aliquid fugiat tempore a praesentium sit illo impedit repellendus blanditiis ex voluptatem?</p></div>
+        </div>
+      </div>
+    </section>
+    <!-- End About -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
