--- a/index.html
+++ b/index.html
@@ -71,8 +71,19 @@
           <div class="col-4"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia earum cum, odio, aliquid fugiat tempore a praesentium sit illo impedit repellendus blanditiis ex voluptatem?</p></div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#f5e9a4"
+          fill-opacity="1"
+          d="M0,0L48,48C96,96,192,192,288,202.7C384,213,480,139,576,138.7C672,139,768,213,864,213.3C960,213,1056,139,1152,112C1248,85,1344,107,1392,117.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- End About -->
+
+    <!-- Projects -->
+    <section id="projects"></section>
+    <!-- End Projects -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
