--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
-
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <!-- my css -->
     <link rel="stylesheet" href="assets/style.css" />
 
@@ -182,7 +183,7 @@
 
     <!-- Footer -->
     <footer class="bg-warning shadow text-white text-center pb-5">
-      <p>Created with lierr by <a href="https://instagram.com/arifincesar" class="text-white fw-bold">@arifincesar</a></p>
+      <p>Created with <i class="bi bi-earbuds"></i> by <a href="https://instagram.com/arifincesar" class="text-white fw-bold">@arifincesar</a></p>
     </footer>
     <!-- End Footer -->
 
