memperbaiki navbar menjadi fixed-top dan memperbaiki padding jumbotron

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-warning shadow">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-warning shadow fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Portofolio |Arifincesar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -183,7 +183,7 @@
 
     <!-- Footer -->
     <footer class="bg-warning shadow text-white text-center pb-5">
-      <p>Created with <i class="bi bi-earbuds"></i> by <a href="https://instagram.com/arifincesar" class="text-white fw-bold">@arifincesar</a></p>
+      <p>Created with <i class="bi bi-earbuds text-danger"></i> by <a href="https://instagram.com/arifincesar" class="text-white fw-bold">@arifincesar</a></p>
     </footer>
     <!-- End Footer -->
 
