--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>My Portofolio | Arifincesar</title>
   </head>
-  <body>
+  <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-warning shadow fixed-top">
       <div class="container">
@@ -25,16 +25,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="#contact">Contact Me</a>
             </li>
           </ul>
         </div>
@@ -58,7 +58,7 @@
     <!-- end jumbotron -->
 
     <!-- About -->
-    <section id="About">
+    <section id="about">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
