edit text doang awokowkowk

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     </script>
     <script>
       gsap.registerPlugin(TextPlugin);
-      gsap.to(".lead", { duration: 1.5, delay: 1.5, text: "just simply people" });
+      gsap.to(".lead", { duration: 1.5, delay: 1.5, text: "just simply people | wanna be better" });
     </script>
     <!-- end GSAP -->
   </body>
