--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
     <script>
-      gsap.from(".jumbotron img", { duration: 1, opacity: 0, rotateY: 360 });
+      //gsap.from(".jumbotron img", { duration: 1, opacity: 0, rotateY: 360 });
       gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
       gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "back" });
     </script>
