--- a/index.html
+++ b/index.html
@@ -99,20 +99,22 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-offset="250" data-aos-duration="500" data-aos-delay="100">
+            <div class="card" style="width: 350px" data-aos="flip-left" data-aos-offset="250" data-aos-duration="500" data-aos-delay="100">
               <a href="https://arifincesar.github.io/darecoat/">
-              <img src="assets/img/darecoat.png" class="card-img-top" alt="Project 1" />
+                <img src="assets/img/darecoat.png" class="card-img-top" alt="Project 1" />
+              </a>
               <div class="card-body">
                 <p class="card-text">website for darecoat, mempromosikan coat yang berkualitas dengan harga terjangkau</p>
-              </a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-offset="250" data-aos-duration="500" data-aos-delay="200">
-              <img src="assets/img/yoo.jpg" class="card-img-top" alt="Project 2" />
+              <a href="https://arifincesar.github.io/simply-calculator/">
+                <img src="assets/img/simply-calculator.png" class="card-img-top" alt="Project 2" />
+              </a>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">website for gabut, buat belajar tentang bahasa markup dasar html dan css</p>
               </div>
             </div>
           </div>
